--- a/src/DockerUpdater.Api/DockerUpdater.Api.csproj
+++ b/src/DockerUpdater.Api/DockerUpdater.Api.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5"/>
+        <PackageReference Include="Microsoft.SemanticKernel" Version="1.59.0" />
     </ItemGroup>
 
 </Project>
