Add OpenAI configuration to appsettings and refactor Program.cs for dynamic loading

--- a/src/DockerUpdater.Api/appsettings.json
+++ b/src/DockerUpdater.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "OPENAI_MODEL": "command-a-03-2025",
+  "OPENAI_API_KEY": "",
+  "OPENAI_API_BASE": "https://api.cohere.ai/compatibility/v1"
 }
