--- a/src/DockerUpdater.Api/DockerUpdater.Api.csproj
+++ b/src/DockerUpdater.Api/DockerUpdater.Api.csproj
@@ -1,14 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <UserSecretsId>d62f54fc-dded-4233-8e4f-18342ede10fb</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5"/>
-        <PackageReference Include="Microsoft.SemanticKernel" Version="1.59.0" />
+        <PackageReference Include="Microsoft.SemanticKernel" Version="1.59.0"/>
     </ItemGroup>
 
 </Project>
